kept prim/sec choices formatting consistent in collect minor formatting for prim/sec choices added title to prim/sec choice dialog

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1392,5 +1392,6 @@
     <string name="trait_error_invalid_multicat_value">Invalid categorical data was entered.</string>
     <string name="dialog_crash_report_title">Failed to load data</string>
     <string name="dialog_crash_report_message">Press OK to send an anonymous diagnostic report to help improve the app.</string>
+    <string name="dialog_att_chooser_title_default">Choose an attribute</string>
 
 </resources>
