--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -204,6 +204,9 @@
     <string name="name_conflict_import_name">import name</string>
     <string name="name_conflict_display_name">display name</string>
 
+    <string name="field_edit_unique_id">Change Unique Id</string>
+    <string name="invalid_unique_id_selection">Invalid Selection</string>
+
 <!--    <string name="field_default_sort_order">import order</string>-->
 
     <string name="field_data_title">Data</string>
