--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1393,7 +1393,7 @@
     <string name="dialog_crash_report_title">Failed to load data</string>
     <string name="dialog_crash_report_message">Press OK to send an anonymous diagnostic report to help improve the app.</string>
     <string name="dialog_att_chooser_title_default">Choose an attribute</string>
-    <string name="dialog_quick_goto_title">Move to Unit</string>
+    <string name="dialog_quick_goto_title">Quick GoTo</string>
     <string name="dialog_quick_goto_go">Go</string>
     <string name="quick_goto_primary_hint">Primary ID</string>
     <string name="quick_goto_secondary_hint">Secondary ID</string>
