fixed trait sorting

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1399,5 +1399,6 @@
     <string name="quick_goto_secondary_hint">Secondary ID</string>
     <string name="quick_goto_dialog_icon_description">running person</string>
     <string name="failed_to_fetch_observation_levels">Failed fetching observation levels</string>
+    <string name="traits_sort_default">Default</string>
 
 </resources>
