--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1409,5 +1409,6 @@
     <string name="dialog_crop_message">Define a crop region that will be applied to all future pictures for this trait.</string>
     <string name="view_trait_photo_settings_crop">Set Crop Region</string>
     <string name="crop_image_clip_data_label">Field Book crop region data</string>
+    <string name="quick_goto_swap_content_description">toggle input type</string>
 
 </resources>
