--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -204,14 +204,12 @@
     <string name="name_conflict_import_name">import name</string>
     <string name="name_conflict_display_name">display name</string>
 
-    <string name="field_edit_unique_id">Change Search Attribute</string>
-    <string name="invalid_unique_id_selection">Invalid Selection</string>
-    <string name="search_multiple_matches_found">Found %1$d matching plots. Showing the first one.</string>
-    <string name="barcode_scan_failed">Barcode scan failed or was cancelled</string>
-    <string name="apply_to_all_fields">Apply choice to all eligible fields</string>
-    <string name="dialog_search_attribute_title">Choose search attribute</string>
+    <string name="search_attribute_dialog_title">Set Search ID</string>
+    <string name="dialog_att_chooser_unique_attributes">Unique Attributes</string>
+    <string name="search_attribute_apply_to_all">Apply choice to all eligible fields</string>
     <string name="search_attribute_updated">Search attribute updated</string>
     <string name="search_attribute_updated_all">Search attribute updated for %1$d field(s)</string>
+    <string name="search_multiple_matches_found">Found %1$d matching plots. Showing the first one.</string>
 
 <!--    <string name="field_default_sort_order">import order</string>-->
 
@@ -352,7 +350,6 @@
     <string name="main_toolbar_next_entry_no_data">Next entry with no data</string>
 
     <!-- InfoBars -->
-    <string name="dialog_att_chooser_unique_attributes">Unique Attributes</string>
     <string name="dialog_att_chooser_attributes">Attributes</string>
     <string name="dialog_att_chooser_traits">Traits</string>
     <string name="dialog_att_chooser_other">Other</string>
