--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -204,6 +204,7 @@
     <string name="name_conflict_import_name">import name</string>
     <string name="name_conflict_display_name">display name</string>
 
+    <string name="dialog_att_chooser_title_default">Choose an attribute</string>
     <string name="search_attribute_dialog_title">Set Search ID</string>
     <string name="dialog_att_chooser_unique_attributes">Unique Attributes</string>
     <string name="search_attribute_apply_to_all">Apply choice to all eligible fields</string>
