--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -235,6 +235,8 @@
     <string name="warning_traits_missing_modify">Create traits before modifying them.</string>
 
     <!-- Trait import/export -->
+    <string name="traits_new_dialog_title">New Trait(s)</string>
+    <string name="traits_dialog_create">Create new trait</string>
     <string name="traits_toolbar_import_export">Import/Export</string>
     <string name="traits_dialog_import">Import</string>
     <string name="traits_export_check">Export current trait list?</string>
