--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -246,6 +246,7 @@
     <!-- Trait import/export -->
     <string name="traits_new_dialog_title">New Trait(s)</string>
     <string name="traits_dialog_create">Create new trait</string>
+    <string name="traits_dialog_import_from_file">Import from file</string>
     <string name="traits_dialog_import">Import</string>
     <string name="traits_export_check">Export current trait list?</string>
     <string name="traits_dialog_export">Export</string>
