--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -648,6 +648,7 @@
     <string name="verification_interval_every_24">Every 24 hours</string>
     <string name="verification_interval_never">Never</string>
 
+    <string name="preferences_profile_device_title">Device</string>
     <string name="preferences_profile_set_device_name">Device Name</string>
     <string name="preferences_profile_device_name_dialog_title">Set Device Name</string>
     <string name="preferences_profile_device_name_error">This field cannot be blank</string>
