Add fields grouping

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -93,7 +93,17 @@
     <!-- Changelog -->
     <string name="changelog_title">Changelog</string>
 
+    <string name="group_archived_value">Archived</string>
+    <string name="fields_ungrouped">Ungrouped</string>
+    <string name="dialog_group_options">Grouping Options</string>
+    <string name="group_existing">Existing group</string>
+    <string name="group_archive">Archive</string>
+    <string name="group_new">New group</string>
+    <string name="group_remove">Remove from group</string>
 
+    <string name="create_new_group">Create New Group</string>
+    <string name="dialog_group_name">Group Name</string>
+    <string name="dialog_group_name_warning">Field cannot be blank</string>
 
 
 
