--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -105,6 +105,8 @@
     <string name="dialog_group_name">Group Name</string>
     <string name="dialog_group_name_warning">Field cannot be blank</string>
 
+    <string name="menu_group">Group</string>
+    <string name="menu_archive">Archive</string>
 
 
     <!-- FIELDS -->
