Add archived fields activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -108,6 +108,9 @@
     <string name="menu_group">Group</string>
     <string name="menu_archive">Archive</string>
 
+    <string name="archived_fields">Archived Fields</string>
+    <string name="menu_unarchive">Remove from archive</string>
+
 
     <!-- FIELDS -->
     <!-- General -->
