--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -237,9 +237,7 @@
     <!-- TRAITS -->
 
     <!--Detail-->
-    <string name="trait_observation_count_fields">%1$d observations across %2$d fields</string>
-    <string name="trait_no_observations">No observations recorded</string>
-    <string name="trait_fields_with_observations">Fields with observations: %1$d</string>
+    <string name="trait_options_title">Options</string>
 
     <!-- Sort -->
     <string name="traits_toolbar_sort">Sort Traits</string>
