--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -286,6 +286,7 @@
     <string name="traits_format_angle">Angle</string>
     <string name="traits_format_spectral">Spectral</string>
     <string name="traits_format_nix">Nix</string>
+    <string name="traits_format_inno_spectra">InnoSpectra</string>
 
     <!-- Trait Creation Dialog -->
     <string name="traits_toolbar_add_trait">Trait Format</string>
@@ -1348,7 +1349,7 @@
     <!-- spectral trait strings -->
     <string name="trait_spectral_connect_content_description">Starts a device connection.</string>
     <string name="select_device">Select Device</string>
-    <string name="no_devices_found">traits_spectral_no_devices_found</string>
+    <string name="no_devices_found">No Devices found</string>
     <string name="list_item_color_close_content_description">Delete this color</string>
     <string name="delete_color">Delete Color Observation</string>
     <string name="delete_color_message">This will permanently delete the observation</string>
@@ -1483,5 +1484,38 @@
     <string name="preferences_preferences_title">Preferences</string>
     <string name="nearby_share_export_preferences">Export Preferences</string>
     <string name="nearby_share_import_preferences">Import Preferences</string>
+    <string name="spectral_trait_insert_note">Note</string>
+    <string name="spectral_trait_insert_note_message">Write a note for the chosen entry.</string>
+    <string name="trait_spectral_na_content_description">not applicable value placeholder</string>
+    <string name="act_collect_barcode_spectral">Collecting spectral data via barcode input is not supported at this time.</string>
+    <string name="replace_observations">Delete and Replace</string>
+    <string name="replace_observations_message">Observations already exist, would you like to delete these and insert a NA value?</string>
+    <string name="usb_device_description">USB</string>
+    <string name="not_yet_implemented">This feature is not implemented yet.</string>
+    <string name="view_trait_nix_color_option">Color</string>
+    <string name="view_trait_nix_spectral_option">Spectral</string>
+    <string name="nix_trait_settings_title">%s Settings</string>
+    <string name="disconnect">Disconnect</string>
+    <string name="nix_device_incompatible">This device is incompatible, a previous device type already saved data.</string>
+    <string name="nix_error_unknown">"An unknown Nix error occurred. "</string>
+    <string name="nix_error_license">There was an issue with your Nix license or internet connection.</string>
+    <string name="nix_error_ambient_light">Too much ambient light was detected.</string>
+    <string name="nix_error_timeout">A timeout error occurred.</string>
+    <string name="nix_error_low_power">Batteries are too low to scan.</string>
+    <string name="nix_error_scan_not_supported">This scan is not supported by the device.</string>
+    <string name="nix_error_not_ready">The device is not ready.</string>
+    <string name="view_trait_nix_settings_battery_level">Battery Level: %s</string>
+    <string name="view_trait_nix_settings_rssi">RSSI: %s</string>
+    <string name="view_trait_nix_settings_type">Type: %s</string>
+    <string name="view_trait_nix_settings_factory_note">Factory Note: %s</string>
+    <string name="view_trait_nix_settings_serial_number">Serial Number: %s</string>
+    <string name="view_trait_nix_settings_firmware_version">Firmware Version: %s</string>
+    <string name="view_trait_nix_settings_software_version">Software Version: %s</string>
+    <string name="view_trait_nix_settings_external_power_state">External Power State: %s</string>
+    <string name="nix_error_internal">Internal Nix Error</string>
+    <string name="nix_error_invalid_hardware_id">Invalid hardware ID</string>
+    <string name="nix_error_bluetooth_permissions">You must accept bluetooth permissions or try restarting the app.</string>
+    <string name="nix_error_bluetooth_unavailable">Bluetooth is unavailable.</string>
+    <string name="nix_error_bluetooth_disabled">Bluetooth is disabled on the device.</string>
 
 </resources>
