flesh out new params and add necessary layout

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -365,6 +365,11 @@
     <string name="trait_brapi_label_example">Label: %s</string>
     <string name="trait_brapi_value_example">Value: %s</string>
 
+    <string name="trait_parameter_display_value">Display Value</string>
+    <string name="trait_parameter_resource_file">Resource File</string>
+    <string name="trait_parameter_use_day_of_year">Use Day of Year</string>
+    <string name="list_item_trait_parameter_resource_file_hint">Select a resource file</string>
+
     <!-- COLLECT -->
 
     <!-- Validation -->
