--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -360,10 +360,17 @@
     <string name="trait_name_empty_error">Trait name cannot be empty</string>
     <string name="trait_name_exists_error">A trait with this name already exists</string>
     <string name="trait_copied_success">Trait copied to %1$s</string>
-    <string name="trait_date_format_example">Date: %s</string>
+    <string name="trait_date_format_dialog_title">Select Date Format</string>
+    <string name="trait_date_format_display">Date (%s)</string>
+    <string name="trait_day_format_display">Day of Year (%d)</string>
+    <string name="trait_brapi_display_dialog_title">Select Button Text</string>
+    <string name="trait_brapi_label_display">Show Labels (e.g. %s)</string>
+    <string name="trait_brapi_value_display">Show Values (e.g. %s)</string>
+
+    <!-- <string name="trait_date_format_example">Date: %s</string>
     <string name="trait_day_format_example">Day of Year: %d</string>
     <string name="trait_brapi_label_example">Label: %s</string>
-    <string name="trait_brapi_value_example">Value: %s</string>
+    <string name="trait_brapi_value_example">Value: %s</string> -->
 
     <string name="trait_parameter_display_value">Display Value</string>
     <string name="trait_parameter_resource_file">Resource File</string>
