--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -116,6 +116,10 @@
     <string name="menu_collapse_all">Collapse All</string>
     <string name="menu_expand_all">Expand All</string>
 
+    <string name="archive_active_field_title">Archive Active Field?</string>
+    <string name="archive_active_field_message">You have selected the active field to archive. If you continue, there will be no active field. Do you want to continue?</string>
+    <string name="archive_others">Archive Others</string>
+
 
     <!-- FIELDS -->
     <!-- General -->
