--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1517,5 +1517,7 @@
     <string name="nix_error_bluetooth_permissions">You must accept bluetooth permissions or try restarting the app.</string>
     <string name="nix_error_bluetooth_unavailable">Bluetooth is unavailable.</string>
     <string name="nix_error_bluetooth_disabled">Bluetooth is disabled on the device.</string>
+    <string name="list_item_color_placeholder_content_description">Placeholder for new scan</string>
+    <string name="loading">Loading</string>
 
 </resources>
