updated nix to export color hex when user selects color in the ui even if it has spectral capabilities added green seeker implementation added A&D, Crane Scale, and quasi-generic scale implementations

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -314,6 +314,8 @@
     <string name="traits_format_spectral">Spectral</string>
     <string name="traits_format_nix">Nix</string>
     <string name="traits_format_inno_spectra">InnoSpectra</string>
+    <string name="traits_format_green_seeker">Green Seeker</string>
+    <string name="traits_format_scale">Scale</string>
 
     <!-- Trait Creation Dialog -->
     <string name="traits_toolbar_add_trait">Trait Format</string>
@@ -1519,7 +1521,7 @@
     <string name="nearby_share_export_preferences">Export Preferences</string>
     <string name="nearby_share_import_preferences">Import Preferences</string>
     <string name="all_fields_processed">All fields processed</string>
-  
+
     <string name="spectral_trait_insert_note">Note</string>
     <string name="spectral_trait_insert_note_message">Write a note for the chosen entry.</string>
     <string name="trait_spectral_na_content_description">not applicable value placeholder</string>
@@ -1558,4 +1560,8 @@
     <string name="nix_error_no_network">Nix may require internet to work properly.</string>
 
     <string name="import_runnable_field_name_exists">Field name already exists.</string>
+    <string name="device_settings_dialog_name">Name: %s</string>
+    <string name="device_settings_dialog_address">Address: %s</string>
+    <string name="device_settings_dialog_unknown_name">Unknown Bluetooth Device</string>
+    <string name="device_settings_dialog_title">Bluetooth Device Settings</string>
 </resources>
