--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -225,6 +225,8 @@
     <string name="field_creator_preview_expand_button">Expand Grid</string>
     <string name="field_creator_preview_collapse_button">Collapse Grid</string>
 
+    <string name="field_creator_expanded_preview_title">Full Field Preview</string>
+
     <string name="dialog_field_creator_ask_name_hint">Name</string>
     <string name="dialog_field_creator_ask_row_hint">Rows</string>
     <string name="dialog_field_creator_ask_columns_hint">Columns</string>
