--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1564,4 +1564,5 @@
     <string name="device_settings_dialog_address">Address: %s</string>
     <string name="device_settings_dialog_unknown_name">Unknown Bluetooth Device</string>
     <string name="device_settings_dialog_title">Bluetooth Device Settings</string>
+    <string name="no_data_captured">No data captured.</string>
 </resources>
